This is the final version.

--- a/AlphaGo.tex
+++ b/AlphaGo.tex
@@ -435,7 +435,7 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{\huge{\textbf{The Development of AI in Game Playing Area}}}
+\title{\huge{\textbf{A Summary of the Development of AI in Go Playing Area}}}
 
 
 % author names and affiliations
@@ -531,6 +531,7 @@
 \input{BackgroundKnowledge}
 \input{Related}
 \input{Comparison}
+\input{Thought}
 
 %\begin{table}
 %	\centering
