--- a/IEEEexample.bib
+++ b/IEEEexample.bib
@@ -1565,3 +1565,41 @@ Those fields that are not to be changed can be left out.
   year={2016},
   publisher={Nature Publishing Group}
 }
+
+@inproceedings{schaeffer2001temporal,
+  title={Temporal difference learning applied to a high-performance game-playing program},
+  author={Schaeffer, Jonathan and Hlynka, Markian and Jussila, Vili},
+  booktitle={Proceedings of the 17th international joint conference on Artificial intelligence-Volume 1},
+  pages={529--534},
+  year={2001},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@inproceedings{silver2009monte,
+  title={Monte-Carlo simulation balancing},
+  author={Silver, David and Tesauro, Gerald},
+  booktitle={Proceedings of the 26th Annual International Conference on Machine Learning},
+  pages={945--952},
+  year={2009},
+  organization={ACM}
+}
+
+@article{browne2012survey,
+  title={A survey of monte carlo tree search methods},
+  author={Browne, Cameron B and Powley, Edward and Whitehouse, Daniel and Lucas, Simon M and Cowling, Peter I and Rohlfshagen, Philipp and Tavener, Stephen and Perez, Diego and Samothrakis, Spyridon and Colton, Simon},
+  journal={Computational Intelligence and AI in Games, IEEE Transactions on},
+  volume={4},
+  number={1},
+  pages={1--43},
+  year={2012},
+  publisher={IEEE}
+}
+
+@inproceedings{clark2015training,
+  title={Training deep convolutional neural networks to play go},
+  author={Clark, Christopher and Storkey, Amos},
+  booktitle={Proceedings of the 32nd International Conference on Machine Learning (ICML-15)},
+  pages={1766--1774},
+  year={2015}
+}
+
