--- a/Thought.tex
+++ b/Thought.tex
@@ -1,1 +1,4 @@
-\section{background}
+\section{Thoughts}
+Imaging a person is assigned some kind of job, or he wants to finish some kind of job, he should a plan. This plan should contain multiple steps. Another fact is that, for each step, there will be multiple options. In order to reach the destination as soon as possible, he should choose the right option at each step. And he has basically two options: the first is to try every option by himself; the second is to find a mentor, who can at least tell him which option is not likely to lead to the destination. Hopefully, this mentor can also point out some shortcuts. The help of the mentor will definitely help him save some time. 
+%The recent methods are more like the Ph.D. career. If some one can tell you the things which are more likely to lead to success, it will definitely shorten the time which you need to reach your destination. This is like compressing the searching space.
+
